feat: Add RSpec execution to CI pipeline
Adds an RSpec binstub to the project for easier execution.

Updates the CI workflow to prepare the test database and then run the RSpec test suite, ensuring tests are automatically run on every push.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,7 +64,7 @@ jobs:
           RAILS_ENV: test
           DATABASE_URL: postgres://postgres:postgres@localhost:5432
           # REDIS_URL: redis://localhost:6379/0
-        run: bin/rails db:test:prepare test
+        run: bin/rails db:test:prepare && bin/rspec --format documentation --color --profile
 
       - name: Keep screenshots from failed system tests
         uses: actions/upload-artifact@v4
