Improve Danger workflow and reporting
Updates the GitHub Actions workflow to use the `bundler-cache` feature, which simplifies the configuration and speeds up dependency installation.

Additionally, enhances the Danger report to include a summary count of errors and warnings for clearer feedback.

--- a/.github/workflows/danger.yml
+++ b/.github/workflows/danger.yml
@@ -16,12 +16,9 @@ jobs:
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: "3.4.3"
-
-      - name: Install dependencies
-        run: |
-          gem install bundler
-          bundle install || true
+          ruby-version: 3.4.3
+          bundler-cache: true
+          working-directory: ${{ github.workspace }}/mat_views
 
       - name: Run Danger
         run: bundle exec danger
