chore: Apply consistent style and update linting rules
Replaces `rubocop-rails-omakase` with a more granular set of RuboCop plugins for performance, RSpec, and Rake.

Enforces a consistent code style across the entire project by running auto-correct. This includes adding frozen string literal pragmas, standardizing on single quotes, and other minor style adjustments.

Updates the Ruby version to 3.4.3 and specifies a minimum required version of 3.2 in the gemspec. Modernizes the `Dangerfile` with more idiomatic syntax.

--- a/mat_views/Gemfile
+++ b/mat_views/Gemfile
@@ -1,17 +1,21 @@
-source "https://rubygems.org"
+# frozen_string_literal: true
 
-# Specify your gem's dependencies in mat_views.gemspec.
+source 'https://rubygems.org'
+
 gemspec
 
-gem "puma"
+gem 'pg'
+gem 'propshaft'
+gem 'puma'
 
-gem "pg"
-
-gem "propshaft"
-
-# Omakase Ruby styling [https://github.com/rails/rubocop-rails-omakase/]
-gem "rubocop-rails-omakase", require: false
-
-# Start debugger with binding.b [https://github.com/ruby/debug]
-# gem "debug", ">= 1.0.0"
-gem "danger"
+group :development, :test do
+  # Start debugger with binding.b [https://github.com/ruby/debug]
+  # gem "debug", ">= 1.0.0"
+  gem 'danger'
+  gem 'faraday-retry', '~> 2.3'
+  gem 'rspec-rails'
+  gem 'rubocop-performance', '~> 1.25'
+  gem 'rubocop-rake', '~> 0.7.1'
+  gem 'rubocop-rspec', '~> 3.6'
+  gem 'rubocop-rspec_rails', '~> 2.31'
+end
