--- a/mat_views/Gemfile
+++ b/mat_views/Gemfile
@@ -13,6 +13,7 @@ group :development, :test do
   # gem "debug", ">= 1.0.0"
   gem 'danger'
   gem 'faraday-retry', '~> 2.3'
+  gem 'generator_spec', '~> 0.10.0'
   gem 'rspec-rails'
   gem 'rubocop-performance', '~> 1.25'
   gem 'rubocop-rake', '~> 0.7.1'
