feat: Add data models and seeds to dummy app
Adds User, Account, Event, and Session models to the dummy application to create a more realistic testing environment.

Includes a new seed file that uses the Faker gem to populate the database with a large and varied dataset.

Also adds `shoulda-matchers` and corresponding model specs to verify associations and validations.

--- a/mat_views/Gemfile
+++ b/mat_views/Gemfile
@@ -12,6 +12,7 @@ group :development, :test do
   # Start debugger with binding.b [https://github.com/ruby/debug]
   # gem "debug", ">= 1.0.0"
   gem 'danger'
+  gem 'faker'
   gem 'faraday-retry', '~> 2.3'
   gem 'generator_spec', '~> 0.10.0'
   gem 'rspec-rails'
@@ -19,4 +20,5 @@ group :development, :test do
   gem 'rubocop-rake', '~> 0.7.1'
   gem 'rubocop-rspec', '~> 3.6'
   gem 'rubocop-rspec_rails', '~> 2.31'
+  gem 'shoulda-matchers'
 end
