chore: Improve handling of Dependabot PRs
Skips running the Danger CI job for Dependabot pull requests to reduce unnecessary checks and CI noise.

Updates the release drafter configuration to automatically label, categorize, and create appropriate version bumps for dependency updates.

--- a/.github/workflows/danger.yml
+++ b/.github/workflows/danger.yml
@@ -5,6 +5,7 @@ on:
 
 jobs:
   danger:
+    if: ${{ github.event.pull_request.user.login != 'dependabot[bot]' && !startsWith(github.head_ref, 'dependabot/') }}
     runs-on: ubuntu-latest
     defaults:
       run:
