ci: Update dependabot autolabeler trigger
Aligns the release drafter's autolabeler with conventional commit standards.

The trigger for applying the `dependabot` label to a pull request is updated from matching a `dependabot:` prefix in the title to matching a `chore(...)` prefix.

--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -6,7 +6,7 @@ autolabeler:
     branch:
       - /^dependabot\//
     title:
-      - /^dependabot:/
+      - /^chore\(.*\):/
   - label: "feature"
     branch:
       - /^feat\//
