--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -6,7 +6,8 @@ autolabeler:
     branch:
       - /^dependabot\//
     title:
-      - /^chore\(.*\):/
+      - /^chore\(deps\):/
+      - /^chore\(dependencies\):/
   - label: "feature"
     branch:
       - /^feat\//
