feat: Add FactoryBot for test data generation
Introduces `factory_bot_rails` to create test objects for `MatViewDefinition` and `MatViewRefreshRun`. This simplifies test setup and improves maintainability.

- Adds factories for core engine models.
- Includes a sanity check spec to ensure factories are valid.
- Configures RSpec and RuboCop for FactoryBot integration.
- Updates contribution guidelines with information on using factories.

--- a/mat_views/.rubocop.yml
+++ b/mat_views/.rubocop.yml
@@ -3,6 +3,7 @@ plugins:
   - rubocop-rspec_rails
   - rubocop-performance
   - rubocop-rake
+  - rubocop-factory_bot
 AllCops:
   NewCops: enable
   TargetRubyVersion: 3.2
