--- a/mat_views/Gemfile
+++ b/mat_views/Gemfile
@@ -12,13 +12,15 @@ group :development, :test do
   # Start debugger with binding.b [https://github.com/ruby/debug]
   # gem "debug", ">= 1.0.0"
   gem 'danger'
+  gem 'factory_bot_rails'
   gem 'faker'
-  gem 'faraday-retry', '~> 2.3'
-  gem 'generator_spec', '~> 0.10.0'
+  gem 'faraday-retry'
+  gem 'generator_spec'
   gem 'rspec-rails'
-  gem 'rubocop-performance', '~> 1.25'
-  gem 'rubocop-rake', '~> 0.7.1'
-  gem 'rubocop-rspec', '~> 3.6'
-  gem 'rubocop-rspec_rails', '~> 2.31'
+  gem 'rubocop-factory_bot'
+  gem 'rubocop-performance'
+  gem 'rubocop-rake'
+  gem 'rubocop-rspec'
+  gem 'rubocop-rspec_rails'
   gem 'shoulda-matchers'
 end
