feat: Add job adapter for background processing
Introduces a job adapter to support multiple background job backends, including ActiveJob, Sidekiq, and Resque. This makes the engine more flexible for integration into various application stacks.

The adapter is configurable via `MatViews.config.job_adapter` and `MatViews.config.job_queue`. The initializer template and documentation are updated to reflect these new options.

Adds tests to verify that jobs are correctly enqueued for each supported adapter.

--- a/mat_views/Gemfile
+++ b/mat_views/Gemfile
@@ -24,3 +24,8 @@ group :development, :test do
   gem 'rubocop-rspec_rails'
   gem 'shoulda-matchers'
 end
+
+group :test do
+  gem 'resque'
+  gem 'sidekiq'
+end
