Feat: Add service and job for creating materialized views
Introduces a new service object to encapsulate the logic for creating materialized views, including handling existing views, different refresh strategies, and creating necessary unique indexes.

A corresponding ActiveJob is added to perform view creation asynchronously. This job records the execution status, duration, and any errors in a new `mat_view_create_runs` table.

Also includes:
- A standardized `ServiceResponse` object for consistent service return values.
- Enum prefixes for status methods on run models to prevent method name collisions.
- Test infrastructure updates to support transactionless specs for `CONCURRENTLY` operations.

--- a/mat_views/.rubocop.yml
+++ b/mat_views/.rubocop.yml
@@ -19,3 +19,9 @@ Layout/LineLength:
   Max: 150
 RSpecRails/InferredSpecType:
   Enabled: false
+Metrics/ClassLength:
+  Max: 200
+Metrics/AbcSize:
+  Max: 25
+RSpec/MultipleMemoizedHelpers:
+  Max: 10
