Adds test coverage reports to CI artifacts
Configures SimpleCov to generate an HTML report for test coverage.

Updates the CI workflow to upload this report as a build artifact. This allows for easier inspection of code coverage after a test run.

Also updates the RSpec configuration for a better local development experience.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,6 +66,13 @@ jobs:
           # REDIS_URL: redis://localhost:6379/0
         run: bin/rails db:test:prepare && bin/rails db:seed && bin/rspec --format documentation --color --profile
 
+      - name: Upload simplecov report
+        uses: actions/upload-artifact@v4
+        with:
+          name: simplecov-report
+          path: ${{ github.workspace }}/mat_views/coverage
+          if-no-files-found: ignore
+
       - name: Keep screenshots from failed system tests
         uses: actions/upload-artifact@v4
         if: failure()
