--- a/mat_views/Rakefile
+++ b/mat_views/Rakefile
@@ -1,5 +1,10 @@
 # frozen_string_literal: true
 
+# Copyright Codevedas Inc. 2025-present
+#
+# This source code is licensed under the MIT license found in the
+# LICENSE file in the root directory of this source tree.
+
 require 'bundler/setup'
 
 APP_RAKEFILE = File.expand_path('spec/dummy/Rakefile', __dir__)
