docs: Add comprehensive documentation site
Introduces a full documentation website built with Jekyll and the "just-the-docs" theme to provide detailed guides and references. The new site covers installation, usage, engine internals, validation, PostgreSQL best practices, and a FAQ.

This change also refactors the README for clarity, improves the formatting of benchmark tables, and removes a previously unimplemented configuration option for retries.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,6 +9,10 @@ updates:
     directory: "/mat_views_demo"
     schedule:
       interval: daily
+  - package-ecosystem: bundler
+    directory: "/scripts"
+    schedule:
+      interval: daily
     open-pull-requests-limit: 10
   - package-ecosystem: github-actions
     directory: "/"
