Set explicit permissions for GitHub Actions workflows
Adds explicit permissions to the CI, Danger, and Release workflows to enhance security.

This follows the principle of least privilege by ensuring jobs only have the permissions they require, reducing the access scope of the `GITHUB_TOKEN`.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,8 @@ on:
 
 jobs:
   lint:
+    permissions:
+      contents: read
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -26,8 +28,9 @@ jobs:
         run: bin/rubocop -f github
 
   test:
+    permissions:
+      contents: read
     runs-on: ubuntu-latest
-
     services:
       postgres:
         image: postgres
