--- a/.github/workflows/danger.yml
+++ b/.github/workflows/danger.yml
@@ -5,6 +5,9 @@ on:
 
 jobs:
   danger:
+    permissions:
+      contents: read
+      pull-requests: write
     if: ${{ github.event.pull_request.user.login != 'dependabot[bot]' && !startsWith(github.head_ref, 'dependabot/') }}
     runs-on: ubuntu-latest
     defaults:
