--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -11,7 +11,7 @@ gem "jekyll", "~> 3.10.0"
 gem "minima", "~> 2.5"
 # If you have any plugins, put them here!
 group :jekyll_plugins do
-  gem "just-the-docs"
+  gem "just-the-docs", git: "https://github.com/niteshpurohit/just-the-docs.git"
   gem "github-pages", "~> 232"
   gem "kramdown"
 end
@@ -20,6 +20,7 @@ platforms :mingw, :x64_mingw, :mswin, :jruby do
   gem "tzinfo", ">= 1", "< 3"
   gem "tzinfo-data"
 end
+
 # Performance-booster for watching directories on Windows
 gem "wdm", "~> 0.1", :platforms => [:mingw, :x64_mingw, :mswin]
 gem "http_parser.rb", "~> 0.6.0", :platforms => [:jruby]
