--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -17,6 +17,9 @@ concurrency:
 jobs:
   build:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ${{ github.workspace }}/docs
     steps:
       - uses: actions/checkout@v4
       - uses: actions/configure-pages@v5
@@ -29,14 +32,14 @@ jobs:
           working-directory: ${{ github.workspace }}/docs
 
       - name: Build site
-        run: bundle exec jekyll build --source docs --destination _site
+        run: bundle exec jekyll build
         env:
           JEKYLL_ENV: production
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: _site
+          path: ${{ github.workspace }}/docs/_site
 
   deploy:
     runs-on: ubuntu-latest
