--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -1,16 +1,13 @@
+permissions:
+  contents: read
+  pull-requests: read
 name: Release Drafter
-
 on:
   push:
     branches:
       - main
   pull_request:
     types: [opened, reopened, synchronize]
-
-permissions:
-  contents: write
-  pull-requests: read
-
 jobs:
   release_drafter:
     permissions:
