--- a/mat_views_demo/.rubocop.yml
+++ b/mat_views_demo/.rubocop.yml
@@ -3,6 +3,7 @@ plugins:
   - rubocop-capybara
 AllCops:
   NewCops: enable
+  EnabledByDefault: true
   TargetRubyVersion: 3.2
   SuggestExtensions: true
 
