refactor: Improve job and service architecture
Refactors the jobs and services architecture to improve observability, error handling, and code structure.

- Introduces a new `ApplicationJob` base class to centralize run recording, timing, and error handling logic, reducing duplication in create, refresh, and delete jobs.
- Standardizes the `ServiceResponse` object by replacing `payload` and `meta` with distinct `request` and `response` attributes for clearer data flow.
- Enhances error reporting by storing structured error details (class, message, backtrace) in the `mat_view_runs` table instead of a simple string.
- Implements a consistent execution pattern for all services (`prepare`, `run`, `assign_request`) via a refactored `BaseService`.
- Adds `reek` to the CI pipeline to enforce code quality and smell detection.
- Updates documentation to reflect the new service response structure and improved row count tracking.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,18 +4,23 @@ updates:
     directory: /mat_views
     schedule:
       interval: daily
-    open-pull-requests-limit: 10
+  - package-ecosystem: bundler
+    directory: /mat_views/ruby-lsp/.vscode
+    schedule:
+      interval: daily
   - package-ecosystem: bundler
     directory: /mat_views_demo
+    schedule:
+      interval: daily
+  - package-ecosystem: bundler
+    directory: /mat_views_demo/ruby-lsp/.vscode
     schedule:
       interval: daily
   - package-ecosystem: bundler
     directory: /scripts
     schedule:
       interval: daily
-    open-pull-requests-limit: 10
   - package-ecosystem: github-actions
     directory: /
     schedule:
       interval: daily
-    open-pull-requests-limit: 10
