--- a/mat_views_demo/.rubocop.yml
+++ b/mat_views_demo/.rubocop.yml
@@ -5,6 +5,8 @@ AllCops:
   NewCops: enable
   TargetRubyVersion: 3.2
   SuggestExtensions: true
+  Exclude:
+    - .vscode/**/*
 
 Style/Documentation:
   Enabled: false
