refactor: Prefix exception serialization method and fix typos
Renames the `serialize_error` method on `Exception` to `mv_serialize_error` to prevent potential conflicts with other gems or frameworks.

Updates documentation and tests to correct typos in option names and test data. Also improves the formatting of documentation tables for better readability and adds vendor directories to the RuboCop exclusion list.

--- a/mat_views/.rubocop.yml
+++ b/mat_views/.rubocop.yml
@@ -11,6 +11,8 @@ AllCops:
   SuggestExtensions: true
   Exclude:
     - .vscode/**/*
+    - vendor/**/* # ignore vendored gems
+    - vendor/bundle/**/* # (explicitly, for Bundler’s path)
 
 Metrics/MethodLength:
   Max: 20
