Improve CI workflow and fix documentation typos
Makes the test job dependent on the `lint` and `reek` jobs, ensuring tests only run if static analysis passes.

Removes verbose formatting from the RSpec command in the CI pipeline to simplify the output.

Also corrects several minor typos in code comments and documentation.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,6 +52,7 @@ jobs:
     permissions:
       contents: read
     runs-on: ubuntu-latest
+    needs: [lint, reek]
     services:
       postgres:
         image: postgres
@@ -88,7 +89,7 @@ jobs:
           RAILS_ENV: test
           DATABASE_URL: postgres://postgres:postgres@localhost:5432
           # REDIS_URL: redis://localhost:6379/0
-        run: bin/rails db:test:prepare && bin/rails db:seed && bin/rspec --format documentation --color --profile
+        run: bin/rails db:test:prepare && bin/rails db:seed && bin/rspec
 
       - name: Upload simplecov report
         uses: actions/upload-artifact@v4
