Improve job run recording and refactor services
Refactors job run recording to correctly capture the duration and finish time for failed job runs. This simplifies the processing logic by removing an `ensure` block and handling success and failure paths more explicitly.

Improves readability in the swap refresh service by extracting complex SQL statements into separate, clearly named methods.

Also includes a minor correction to an error message.

--- a/mat_views/.reek.yml
+++ b/mat_views/.reek.yml
@@ -34,6 +34,10 @@ detectors:
     enabled: true
     exclude:
       - MatViews::Services::BaseService
+  DuplicateMethodCall:
+    enabled: true
+    exclude:
+      - MatViews::ApplicationJob#record_run
   ManualDispatch:
     enabled: true
     exclude:
