chore: Add concurrency to CI workflows and fix typo
Adds `concurrency` settings to all GitHub Actions workflows to cancel in-progress jobs when a new run is triggered. This improves efficiency by saving runner time.

Also corrects a typo in a method name.

--- a/.github/workflows/danger.yml
+++ b/.github/workflows/danger.yml
@@ -3,6 +3,9 @@ permissions:
 name: Danger
 on:
   pull_request:
+concurrency:
+  group: danger
+  cancel-in-progress: true
 jobs:
   danger:
     permissions:
