--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,9 @@ on:
   pull_request:
   push:
     branches: [main]
-
+concurrency:
+  group: ci
+  cancel-in-progress: true
 jobs:
   lint:
     permissions:
