--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,14 +84,27 @@ jobs:
           ruby-version: 3.4.3
           bundler-cache: true
           working-directory: ${{ github.workspace }}/mat_views
-
+      - name: Prepare database
+        working-directory: ${{ github.workspace }}/mat_views
+        env:
+          RAILS_ENV: test
+          DATABASE_URL: postgres://postgres:postgres@localhost:5432
+          # REDIS_URL: redis://localhost:6379/0
+        run: bin/rails db:drop && bin/rails db:create && bin/rails db:schema:load
+      - name: Seed database
+        working-directory: ${{ github.workspace }}/mat_views
+        env:
+          RAILS_ENV: test
+          DATABASE_URL: postgres://postgres:postgres@localhost:5432
+          # REDIS_URL: redis://localhost:6379/0
+        run: bin/rails db:seed
       - name: Run tests
         working-directory: ${{ github.workspace }}/mat_views
         env:
           RAILS_ENV: test
           DATABASE_URL: postgres://postgres:postgres@localhost:5432
           # REDIS_URL: redis://localhost:6379/0
-        run: bin/rails db:test:prepare && bin/rails db:seed && bin/rspec
+        run: bin/rspec
 
       - name: Upload simplecov report
         uses: actions/upload-artifact@v4
