refactor: Improve job and service architecture (#167)
* refactor: Improve job and service architecture

Refactors the jobs and services architecture to improve observability, error handling, and code structure.

- Introduces a new `ApplicationJob` base class to centralize run recording, timing, and error handling logic, reducing duplication in create, refresh, and delete jobs.
- Standardizes the `ServiceResponse` object by replacing `payload` and `meta` with distinct `request` and `response` attributes for clearer data flow.
- Enhances error reporting by storing structured error details (class, message, backtrace) in the `mat_view_runs` table instead of a simple string.
- Implements a consistent execution pattern for all services (`prepare`, `run`, `assign_request`) via a refactored `BaseService`.
- Adds `reek` to the CI pipeline to enforce code quality and smell detection.
- Updates documentation to reflect the new service response structure and improved row count tracking.

* refactor: Prefix exception serialization method and fix typos

Renames the `serialize_error` method on `Exception` to `mv_serialize_error` to prevent potential conflicts with other gems or frameworks.

Updates documentation and tests to correct typos in option names and test data. Also improves the formatting of documentation tables for better readability and adds vendor directories to the RuboCop exclusion list.

* Refactor to improve code clarity and remove magic numbers

Introduces a constant for an unknown row count, replacing the magic number -1 throughout the services and tests. This improves readability and maintainability.

Also adds comments to several constants for better documentation and removes a redundant `raise` call.

* Improve CI workflow and fix documentation typos

Makes the test job dependent on the `lint` and `reek` jobs, ensuring tests only run if static analysis passes.

Removes verbose formatting from the RSpec command in the CI pipeline to simplify the output.

Also c

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,9 @@ on:
   pull_request:
   push:
     branches: [main]
-
+concurrency:
+  group: ci
+  cancel-in-progress: true
 jobs:
   lint:
     permissions:
@@ -27,11 +29,32 @@ jobs:
 
       - name: Lint code for consistent style
         run: bin/rubocop -f github
+  reek:
+    permissions:
+      contents: read
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ${{ github.workspace }}/mat_views
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v5
+
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: 3.4.3
+          bundler-cache: true
+          working-directory: ${{ github.workspace }}/mat_views
+
+      - name: Check code smells with reek
+        run: bin/reek
 
   test:
     permissions:
       contents: read
     runs-on: ubuntu-latest
+    needs: [lint, reek]
     services:
       postgres:
         image: postgres
@@ -61,14 +84,27 @@ jobs:
           ruby-version: 3.4.3
           bundler-cache: true
           working-directory: ${{ github.workspace }}/mat_views
-
+      - name: Prepare database
+        working-directory: ${{ github.workspace }}/mat_views
+        env:
+          RAILS_ENV: test
+          DATABASE_URL: postgres://postgres:postgres@localhost:5432
+          # REDIS_URL: redis://localhost:6379/0
+        run: bin/rails db:drop && bin/rails db:create && bin/rails db:schema:load
+      - name: Seed database
+        working-directory: ${{ github.workspace }}/mat_views
+        env:
+          RAILS_ENV: test
+          DATABASE_URL: postgres://postgres:postgres@localhost:5432
+          # REDIS_URL: redis://localhost:6379/0
+        run: bin/rails db:seed
       - name: Run tests
         working-directory: ${{ github.workspace }}/mat_views
         env:
           RAILS_ENV: test
           DATABASE_URL: postgres://postgres:postgres@localhost:5432
           # REDIS_URL: redis://localhost:6379/0
-        run: bin/rails db:test:prepare && bin/rails db:seed && bin/rspec --format documentation --color --profile
+        run: bin/rspec
 
       - name: Upload simplecov report
         uses: actions/upload-artifact@v4
