--- a/mat_views/.rubocop.yml
+++ b/mat_views/.rubocop.yml
@@ -9,13 +9,17 @@ AllCops:
   NewCops: enable
   TargetRubyVersion: 3.2
   SuggestExtensions: true
+  Exclude:
+    - .vscode/**/*
+    - vendor/**/* # ignore vendored gems
+    - vendor/bundle/**/* # (explicitly, for Bundler’s path)
 
 Metrics/MethodLength:
   Max: 20
 RSpec/MultipleExpectations:
   Max: 10
 RSpec/ExampleLength:
-  Max: 15
+  Max: 30
 Layout/LineLength:
   Max: 150
 RSpecRails/InferredSpecType:
@@ -23,10 +27,12 @@ RSpecRails/InferredSpecType:
 Metrics/ClassLength:
   Max: 200
 Metrics/AbcSize:
-  Max: 25
+  Max: 30
 RSpec/MultipleMemoizedHelpers:
   Max: 10
 Metrics/CyclomaticComplexity:
   Max: 10
 RSpec/NestedGroups:
   Max: 5
+Metrics/PerceivedComplexity:
+  Max: 15
