feat: Add row count strategy to create and delete tasks
Adds the `row_count_strategy` parameter to all `create` and `delete` Rake tasks, allowing control over row counting during these operations. This aligns them with the existing `refresh` tasks.

The default `row_count_strategy` for all services and Rake tasks is changed from `:estimated` to `:none` to make row counting an explicit, opt-in action.

Updates documentation and tests to reflect these changes.

--- a/mat_views/.reek.yml
+++ b/mat_views/.reek.yml
@@ -49,6 +49,8 @@ detectors:
       - MatViews::Configuration#job_queue
       - MatViews::Services::BaseService#request
       - MatViews::Services::BaseService#response
+  DataClump:
+    enabled: false
 directories:
   "spec":
     DuplicateMethodCall:
