ci: Switch e2e tests from Chrome to Firefox
Replaces Chrome with Firefox for running the end-to-end test suite.

The reusable test workflow is updated to install Firefox and geckodriver instead of Chrome. The workflow input `need_chrome` is renamed to `need_firefox` to reflect this change, and all calling workflows are updated accordingly.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,7 +66,7 @@ jobs:
       app_dir: ${{ env.APP_DIR }}
       rspec_task: "bin/rspec-unit"
       need_seed: true
-      need_chrome: false
+      need_firefox: false
       upload_coverage: true
       qlty_coverage: true
     secrets:
@@ -80,5 +80,5 @@ jobs:
       app_dir: ${{ env.APP_DIR }}
       rspec_task: "bin/rspec-e2e"
       need_seed: false
-      need_chrome: true
+      need_firefox: true
       upload_coverage: false
