--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -67,7 +67,7 @@ jobs:
       app_dir: ${{ env.APP_DIR }}
       rspec_task: "bin/rspec-unit"
       need_seed: true
-      need_chrome: false
+      need_firefox: false
       upload_coverage: true
       qlty_coverage: true
     secrets:
@@ -81,7 +81,7 @@ jobs:
       app_dir: ${{ env.APP_DIR }}
       rspec_task: "bin/rspec-e2e"
       need_seed: false
-      need_chrome: true
+      need_firefox: true
       upload_coverage: false
 
   push:
