--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,9 @@ env:
 jobs:
   setup:
     runs-on: ubuntu-latest
-    defaults: { run: { working-directory: ${{ env.APP_DIR }} } }
+    defaults:
+      run:
+        working-directory: ${{ env.APP_DIR }}
     steps:
       - uses: actions/checkout@v5
       - uses: ruby/setup-ruby@v1
@@ -32,7 +34,9 @@ jobs:
     permissions: { contents: read }
     runs-on: ubuntu-latest
     needs: setup
-    defaults: { run: { working-directory: ${{ env.APP_DIR }} } }
+    defaults:
+      run:
+        working-directory: ${{ env.APP_DIR }}
     steps:
       - uses: actions/checkout@v5
       - uses: ruby/setup-ruby@v1
@@ -47,7 +51,9 @@ jobs:
     permissions: { contents: read }
     runs-on: ubuntu-latest
     needs: setup
-    defaults: { run: { working-directory: ${{ env.APP_DIR }} } }
+    defaults:
+      run:
+        working-directory: ${{ env.APP_DIR }}
     steps:
       - uses: actions/checkout@v5
       - uses: ruby/setup-ruby@v1
