--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,9 @@ jobs:
   setup:
     name: Setup
     runs-on: ubuntu-latest
-    defaults: { run: { working-directory: ${{ env.APP_DIR }} } }
+    defaults:
+      run:
+        working-directory: ${{ env.APP_DIR }}
     steps:
       - uses: actions/checkout@v5
       - uses: ruby/setup-ruby@v1
@@ -33,7 +35,9 @@ jobs:
     permissions: { contents: read }
     runs-on: ubuntu-latest
     needs: setup
-    defaults: { run: { working-directory: ${{ env.APP_DIR }} } }
+    defaults:
+      run:
+        working-directory: ${{ env.APP_DIR }}
     steps:
       - uses: actions/checkout@v5
       - uses: ruby/setup-ruby@v1
@@ -48,7 +52,9 @@ jobs:
     permissions: { contents: read }
     runs-on: ubuntu-latest
     needs: setup
-    defaults: { run: { working-directory: ${{ env.APP_DIR }} } }
+    defaults:
+      run:
+        working-directory: ${{ env.APP_DIR }}
     steps:
       - uses: actions/checkout@v5
       - uses: ruby/setup-ruby@v1
