Style: Format permissions in GitHub workflows
Updates the YAML syntax for job permissions in the CI and release workflows.

This change converts the single-line map to a multi-line block format to improve readability and maintain a consistent style. There are no functional changes.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,7 +32,8 @@ jobs:
       - run: bundle info rake
 
   lint:
-    permissions: { contents: read }
+    permissions:
+      contents: read
     runs-on: ubuntu-latest
     needs: setup
     defaults:
@@ -49,7 +50,8 @@ jobs:
         run: bin/rubocop -f github
 
   reek:
-    permissions: { contents: read }
+    permissions:
+      contents: read
     runs-on: ubuntu-latest
     needs: setup
     defaults:
