--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,8 @@ jobs:
       - run: bundle info rake
 
   lint:
-    permissions: { contents: read }
+    permissions:
+      contents: read
     runs-on: ubuntu-latest
     needs: setup
     defaults:
@@ -48,7 +49,8 @@ jobs:
         run: bin/rubocop -f github
 
   reek:
-    permissions: { contents: read }
+    permissions:
+      contents: read
     runs-on: ubuntu-latest
     needs: setup
     defaults:
