--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -95,7 +95,7 @@ jobs:
   push:
     name: Build & Push gem
     runs-on: ubuntu-latest
-    needs: test
+    needs: [tests, e2e_tests]
     permissions:
       contents: write
       id-token: write
