Fix GitHub Actions workflow syntax and remove coverage
Updates the syntax for passing environment variables to reusable workflows in the CI and release pipelines. This ensures variables are correctly interpreted by GitHub Actions.

Additionally, removes the code coverage upload step from the release workflow.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,8 +70,8 @@ jobs:
     needs: [lint, reek]
     uses: ./.github/workflows/ruby-tests.yml
     with:
-      ruby_version: ${{ env.RUBY_VERSION }}
-      app_dir: ${{ env.APP_DIR }}
+      ruby_version: $RUBY_VERSION
+      app_dir: $APP_DIR
       rspec_task: "bin/rspec-unit"
       need_seed: true
       need_firefox: false
@@ -84,8 +84,8 @@ jobs:
     needs: [lint, reek]
     uses: ./.github/workflows/ruby-tests.yml
     with:
-      ruby_version: ${{ env.RUBY_VERSION }}
-      app_dir: ${{ env.APP_DIR }}
+      ruby_version: $RUBY_VERSION
+      app_dir: $APP_DIR
       rspec_task: "bin/rspec-e2e"
       need_seed: false
       need_firefox: true
