--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -71,22 +71,19 @@ jobs:
     needs: [lint, reek]
     uses: ./.github/workflows/ruby-tests.yml
     with:
-      ruby_version: ${{ env.RUBY_VERSION }}
-      app_dir: ${{ env.APP_DIR }}
+      ruby_version: $RUBY_VERSION
+      app_dir: $APP_DIR
       rspec_task: "bin/rspec-unit"
       need_seed: true
       need_firefox: false
-      upload_coverage: true
-      qlty_coverage: true
-    secrets:
-      QLTY_COVERAGE_TOKEN: ${{ secrets.QLTY_COVERAGE_TOKEN }}
+      upload_coverage: false
 
   e2e_tests:
     needs: [lint, reek]
     uses: ./.github/workflows/ruby-tests.yml
     with:
-      ruby_version: ${{ env.RUBY_VERSION }}
-      app_dir: ${{ env.APP_DIR }}
+      ruby_version: $RUBY_VERSION
+      app_dir: $APP_DIR
       rspec_task: "bin/rspec-e2e"
       need_seed: false
       need_firefox: true
