Fix environment variable propagation in CI/CD workflows
Correctly passes top-level environment variables to the reusable test workflow jobs.

The `tests` and `e2e_tests` jobs in the CI and release workflows require environment variables to be explicitly defined at the job level to be accessible within the `with` block for a reusable workflow.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -70,6 +70,9 @@ jobs:
   tests:
     needs: [lint, reek]
     uses: ./.github/workflows/ruby-tests.yml
+    env:
+      RUBY_VERSION: ${{ env.RUBY_VERSION }}
+      APP_DIR: ${{ env.APP_DIR }}
     with:
       ruby_version: $RUBY_VERSION
       app_dir: $APP_DIR
@@ -81,6 +84,9 @@ jobs:
   e2e_tests:
     needs: [lint, reek]
     uses: ./.github/workflows/ruby-tests.yml
+    env:
+      RUBY_VERSION: ${{ env.RUBY_VERSION }}
+      APP_DIR: ${{ env.APP_DIR }}
     with:
       ruby_version: $RUBY_VERSION
       app_dir: $APP_DIR
