--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,13 +68,8 @@ jobs:
 
   tests:
     needs: [lint, reek]
-    uses: ./.github/workflows/ruby-tests.yml
-    env:
-      RUBY_VERSION: ${{ env.RUBY_VERSION }}
-      APP_DIR: ${{ env.APP_DIR }}
+    uses: ./.github/workflows/ruby-tests.yml}
     with:
-      ruby_version: $RUBY_VERSION
-      app_dir: $APP_DIR
       rspec_task: "bin/rspec-unit"
       need_seed: true
       need_firefox: false
@@ -86,12 +81,7 @@ jobs:
   e2e_tests:
     needs: [lint, reek]
     uses: ./.github/workflows/ruby-tests.yml
-    env:
-      RUBY_VERSION: ${{ env.RUBY_VERSION }}
-      APP_DIR: ${{ env.APP_DIR }}
     with:
-      ruby_version: $RUBY_VERSION
-      app_dir: $APP_DIR
       rspec_task: "bin/rspec-e2e"
       need_seed: false
       need_firefox: true
