Fix syntax error in CI workflow
Removes an extraneous closing brace in the `tests` job definition to correct a YAML syntax error.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,7 +68,7 @@ jobs:
 
   tests:
     needs: [lint, reek]
-    uses: ./.github/workflows/ruby-tests.yml}
+    uses: ./.github/workflows/ruby-tests.yml
     with:
       rspec_task: "bin/rspec-unit"
       need_seed: true
