--- a/.github/workflows/ruby-tests.yml
+++ b/.github/workflows/ruby-tests.yml
@@ -46,10 +46,17 @@ jobs:
           POSTGRES_PASSWORD: postgres
         ports: ["5432:5432"]
         options: >-
-          --health-cmd="pg_isready"
+          --mount type=tmpfs,destination=/var/lib/postgresql/data
+          --health-cmd="pg_isready -U postgres -d app_test"
           --health-interval=10s
           --health-timeout=5s
-          --health-retries=3
+          --health-retries=10
+          -c fsync=off
+          -c synchronous_commit=off
+          -c full_page_writes=off
+          -c wal_level=minimal
+          -c shared_buffers=256MB
+          -c max_wal_size=1GB
 
     steps:
       - name: Install minimal apt packages
@@ -67,7 +74,13 @@ jobs:
           sudo apt-get update
           sudo apt-get install --no-install-recommends -y firefox
           curl -sL "https://github.com/mozilla/geckodriver/releases/download/v${GECKO_VERSION}/geckodriver-v${GECKO_VERSION}-linux64.tar.gz" | tar -xz -C /usr/local/bin
-
+      - name: Debug Firefox paths
+        if: ${{ inputs.need_firefox }}
+        run: |
+          which firefox || true
+          which firefox-esr || true
+          ls -l /usr/bin/firefox* || true
+          ls -l /usr/lib/firefox/firefox || true
       - name: Checkout
         uses: actions/checkout@v5
 
