--- a/.github/workflows/ruby-tests.yml
+++ b/.github/workflows/ruby-tests.yml
@@ -47,15 +47,10 @@ jobs:
         ports: ["5432:5432"]
         options: >-
           --mount type=tmpfs,destination=/var/lib/postgresql/data
-          --health-cmd="pg_isready -U postgres -d app_test"
+          --health-cmd="pg_isready"
           --health-interval=10s
           --health-timeout=5s
-          --health-retries=10
-          -c synchronous_commit=off
-          -c full_page_writes=off
-          -c wal_level=minimal
-          -c shared_buffers=256MB
-          -c max_wal_size=1GB
+          --health-retries=3
 
     steps:
       - name: Install minimal apt packages
