Improve CI performance with bootsnap and test profiling
Adds the `bootsnap` gem to cache expensive operations and speed up application boot time. The CI workflow is updated to cache bootsnap's artifacts, further improving build speeds on subsequent runs.

Additionally, enables RSpec profiling to report the 10 slowest examples, which will help identify and optimize performance bottlenecks in the test suite.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -71,7 +71,7 @@ jobs:
     needs: [lint, reek]
     uses: ./.github/workflows/ruby-tests.yml
     with:
-      rspec_task: "bin/rspec-unit"
+      rspec_task: "bin/rspec-unit --profile 10"
       need_seed: true
       need_firefox: false
       upload_coverage: false
@@ -80,7 +80,7 @@ jobs:
     needs: [lint, reek]
     uses: ./.github/workflows/ruby-tests.yml
     with:
-      rspec_task: "bin/rspec-e2e"
+      rspec_task: "bin/rspec-e2e --profile 10"
       need_seed: false
       need_firefox: true
       upload_coverage: false
