--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,7 +70,7 @@ jobs:
     needs: [lint, reek]
     uses: ./.github/workflows/ruby-tests.yml
     with:
-      rspec_task: "bin/rspec-unit"
+      rspec_task: "bin/rspec-unit --profile 10"
       need_seed: true
       need_firefox: false
       upload_coverage: true
@@ -82,7 +82,7 @@ jobs:
     needs: [lint, reek]
     uses: ./.github/workflows/ruby-tests.yml
     with:
-      rspec_task: "bin/rspec-e2e"
+      rspec_task: "bin/rspec-e2e --profile 10"
       need_seed: false
       need_firefox: true
       upload_coverage: false
